tests/invalid/Byte_Invalid_3.whiley
function f(byte x, byte y, byte z) -> (byte r):
    return x & y | z
